# DISCnetAdvancedMachineLearningCourse

./: .gitignore  README.md
modern-nets-slides/: README.md  classification_demo.py  detection_demo.py  instance_segmentation_demo.py  keypoints_demo.py  modern-archs.py  pyproject.toml  segmentation_demo.py
modern-nets-slides/layouts/: instance_segmentation_demo.slides.json  keypoints_demo.slides.json  modern-archs.slides.json  segmentation_demo.slides.json
